examples/errors/function_pointer_incorrect_arg.cberk
type mah_function = def (int) -> int;

fun bar(g: mah_function, a: int) {
    g(3.44)
}

fun main() {}

main()
